# djinni-generator

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  REPO.bazel  WORKSPACE.bazel  archives.bzl  build.sbt  djinni-generator-archives.bzl  djinni-generator-config.bzl  djinni-generator-setup.bzl
.github/workflows/: bazel-build.yaml  main.yaml  release.yaml
check/: BUILD.bazel
docs/: cli-usage.md  developer-guide.md  generated-code-usage.md  idl.md  modularization.md
src/it/resources/expected/all_datatypes/: generated-files.txt
src/it/resources/expected/my_client_interface/: generated-files.txt
src/it/resources/expected/my_cpp_interface/: generated-files.txt
src/it/resources/expected/my_enum/: generated-files.txt
src/it/resources/expected/my_flags/: generated-files.txt
src/it/resources/expected/my_record/: generated-files.txt
src/it/resources/expected/using_custom_datatypes/: generated-files.txt
src/it/scala/djinni/: GeneratorIntegrationTest.scala  IntegrationTest.scala
src/main/scala/djinni/: JavaMarshal.scala  Main.scala  Marshal.scala  YamlGenerator.scala  generator.scala  meta.scala  parser.scala  resolver.scala
